# web-analytics

./: -arlt  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  MANIFEST.in  README.md  environment.yml  genindex.html  index.html  objects.inv  setup.cfg  tox.ini  usage.html
.github/workflows/: branch-cicd.yaml  stable-cicd.yaml
_sources/: index.rst.txt  usage.rst.txt
_sources/support/: contribute.rst.txt
archive/sql/: create_partitions.sql  mission_downloads_sql.rtf  prd_tbl_all_det.sql  prd_tbl_atm_agg.sql  prd_tbl_geo_agg.sql  prd_tbl_img_agg.sql  prd_tbl_naif_agg.sql  prd_tbl_ppi_agg.sql  prd_tbl_rings_agg.sql  prd_tbl_sbn_agg.sql  prd_vw_all_agg.sql  view_pds_all_processed.sql
config/: config_dev.yaml  config_dev_kai.yaml  config_example.yaml  config_prod.yaml  config_prod_final.yaml  config_prod_staging.yaml  config_test.yaml  def.yaml
config/logstash/: web-analytics-test.conf  web-analytics.conf
config/logstash/config/: logstash.yml  pipeline-geo.conf  pipelines.yml  pipelines.yml.template
config/logstash/config/inputs/: pds-input-s3-atm.conf  pds-input-s3-en.conf  pds-input-s3-geo.conf  pds-input-s3-img.conf  pds-input-s3-naif.conf  pds-input-s3-ppi.conf  pds-input-s3-rings.conf  pds-input-s3-sbn.conf
config/logstash/config/pipelines/: pipeline-pds-input-s3-atm.conf  pipeline-pds-input-s3-en.conf  pipeline-pds-input-s3-geo.conf  pipeline-pds-input-s3-img.conf  pipeline-pds-input-s3-naif.conf  pipeline-pds-input-s3-ppi.conf  pipeline-pds-input-s3-rings.conf  pipeline-pds-input-s3-sbn.conf
config/logstash/config/plugins/: regexes.yaml
config/logstash/config/shared/: pds-filter.conf  pds-output-opensearch.conf
config/opensearch/: README.md  ecs-8.17-custom-template.json  en-web-analytics.mappings.json
docs/requirements/release/1.0.0/: REQUIREMENTS.md
docs/requirements/v1.1.0-dev/: REQUIREMENTS.md
docs/source/: conf.py  configuration.rst  installation.rst  usage.rst
docs/source/support/: contribute.rst  help.rst
html/: .buildinfo  configuration.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js
html/.doctrees/: configuration.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
html/.doctrees/installation/: installation.doctree
html/.doctrees/support/: contact.doctree  contribute.doctree  help.doctree
html/.doctrees/usage/: configuration.doctree  usage.doctree
html/_sources/: index.rst.txt
html/installation/: installation.html
html/support/: contact.html  contribute.html  help.html
html/usage/: configuration.html  usage.html
nbs/: proto_boto3_pyathena.ipynb
notebooks/: dataset_EDA.ipynb  eda_imaging.ipynb  eda_rings.ipynb  prototype_data_proc.ipynb  prototype_data_proc_rings.ipynb  prototype_data_processing.ipynb  req_data_2021_all_nodes.ipynb  rms_node_report.ipynb
scripts/: img_s3_download.py  logstash_build_config.sh  s3_log_sync.py  s3_log_sync.sh
src/: clf_data_augmenter.py  clf_parser.py  foo.py
src/pds/: __init__.py
src/pds/web_analytics/: __init__.py  s3_sync.py
src/sql/: create_partitions.sql  prd_alt_all.sql  prd_tbl_all_det.sql  prd_tbl_all_det_2.sql  prd_tbl_en_search.sql  prd_tbl_en_search_qry.sql  prd_tbl_naif_agg.sql  prd_tbl_sbn_agg.sql  qrt_all_nodes.sql  scratch.sql  table_logs_raw.sql  table_logs_raw_PDS_ALL.sql  view_summary_day.sql
src/sql/creation/: prd_tbl_atm_agg.sql  prd_tbl_geo_agg.sql  prd_tbl_ppi_agg.sql  prd_tbl_rings_agg.sql  vw_rings_processed_agg.sql
support/: contribute.html  help.html
terraform/: README.md  backend.tf  outputs.tf  provider.tf  variables.tf  versions.tf  web-analytics.tf
tests/: README.md  conftest.py  run_tests.sh  run_unit_tests.sh  test_logstash_integration.py  test_s3_sync.py
tests/config/: test-input-ftp.conf  test-input-https.conf  test-input-img.conf  test-input-logs.conf  test-output.conf
tests/data/logs/: atm-atmos-apache.2025-06-01.txt  atm-atmos-ftp.2025-06-01  en_access_log.2024-05-23.txt  img-pdsimg1-http-access_log-20250228  naif-httpdlogs-naif_access_log.250531  rings-apache-metrics-tools2_access_log-2025-05-31.txt  rings-apache-metrics-tools_access_log-2025-05-31.txt  sbn-psi-tomcat-sbn_daily_20250531.txt  sbn-psi-tools-sbnapps_20250531.txt
tests/output/empty-user-agents/2025-01-11/: 182.50.249.59-2025-01-11T01:30:35.000Z.json
tests/output/empty-user-agents/2025-01-12/: 213.152.161.5-2025-01-12T17:03:29.000Z.json
tests/output/invalid-datetime/2025-06-10/: %{[source][address]}-2025-06-10T21:52:40.345792Z.json  %{[source][address]}-2025-06-10T21:52:40.346151Z.json  %{[source][address]}-2025-06-10T21:52:40.346724Z.json  %{[source][address]}-2025-06-10T21:52:40.349670Z.json  %{[source][address]}-2025-06-10T21:52:40.349800Z.json  %{[source][address]}-2025-06-10T21:52:40.349946Z.json  %{[source][address]}-2025-06-10T21:52:40.352696Z.json  %{[source][address]}-2025-06-10T21:52:40.352906Z.json  %{[source][address]}-2025-06-10T21:52:40.353132Z.json
tests/output/processed-logs/2024-01-01/: 10.0.0.1-2024-01-01T00:00:00.000Z.json  hostname.example.com-2024-01-01T00:00:00.000Z.json
tests/output/processed-logs/2025-01-17/: 10.1.3.214-2025-01-17T11:06:43.000Z.json
tests/output/processed-logs/2025-05-31/: 177.72.203.80-2025-05-31T07:00:04.000Z.json  177.85.180.107-2025-05-31T07:00:10.000Z.json  177.89.248.191-2025-05-31T07:00:09.000Z.json  179.108.234.63-2025-05-31T07:00:31.000Z.json  185.180.12.65-2025-05-31T07:00:05.000Z.json  20.171.207.159-2025-05-31T07:00:00.000Z.json  213.230.92.88-2025-05-31T07:00:57.000Z.json  45.164.177.203-2025-05-31T07:00:31.000Z.json  49.36.217.82-2025-05-31T07:00:00.000Z.json
